--- a/index.html
+++ b/index.html
@@ -1,20 +1,5 @@
 
 <!DOCTYPE html>
-<!-- saved from url=(0033)http://web.cs.ucla.edu/~ahmedk/ -->
-<html lang="en"><head><script src="//archive.org/includes/athena.js" type="text/javascript"></script>
-<script type="text/javascript">window.addEventListener('DOMContentLoaded',function(){var v=archive_analytics.values;v.service='wb';v.server_name='wwwb-app212.us.archive.org';v.server_ms=414;archive_analytics.send_pageview({});});</script>
-<script type="text/javascript" src="https://web-static.archive.org/_static/js/bundle-playback.js?v=HxkREWBo" charset="utf-8"></script>
-<script type="text/javascript" src="https://web-static.archive.org/_static/js/wombat.js?v=txqj7nKC" charset="utf-8"></script>
-<script>window.RufflePlayer=window.RufflePlayer||{};window.RufflePlayer.config={"autoplay":"on","unmuteOverlay":"hidden"};</script>
-<script type="text/javascript" src="https://web-static.archive.org/_static/js/ruffle/ruffle.js"></script>
-<script type="text/javascript">
-    __wm.init("https://web.archive.org/web");
-  __wm.wombat("https://web.cs.ucla.edu/~ahmedk/","20240430001039","https://web.archive.org/","web","https://web-static.archive.org/_static/",
-	      "1714435839");
-</script>
-<link rel="stylesheet" type="text/css" href="https://web-static.archive.org/_static/css/banner-styles.css?v=S1zqJCYt" />
-<link rel="stylesheet" type="text/css" href="https://web-static.archive.org/_static/css/iconochive.css?v=qtvMKcIJ" />
-<!-- End Wayback Rewrite JS Include -->
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
   
@@ -95,7 +80,7 @@
           <!-- <br> -->
             <em>EMNLP 2024</em>.
           <br>
-          [<a href="http://web.cs.ucla.edu/~ahmedk/" onclick="$('#tokenization-abstract').toggle();return false;">abstract</a>]
+          [<a href="kareemahmed.com/" onclick="$('#tokenization-abstract').toggle();return false;">abstract</a>]
           <div id="tokenization-abstract" class="abstract" style="display:none;">
               <p>
 		Large Language Models (LLMs) are typically shipped with tokenizers that deterministically encode text into so-called canonical token sequences, to which the LLMs assign probability values.
@@ -115,7 +100,7 @@
           <!-- <br> -->
             <em>ICML 2024</em>.
           <br>
-          [<a href="http://web.cs.ucla.edu/~ahmedk/" onclick="$('#pyjuice-abstract').toggle();return false;">abstract</a>]
+          [<a href="kareemahmed.com/" onclick="$('#pyjuice-abstract').toggle();return false;">abstract</a>]
           <div id="pyjuice-abstract" class="abstract" style="display:none;">
               <p>
 		Probabilistic Circuits (PCs) are a general framework for tractable deep generative models, which support exact and efficient probabilistic inference on their learned distributions.
@@ -134,7 +119,7 @@
           <!-- <br> -->
             <em>ICLR 2024</em>.
           <br>
-          [<a href="http://web.cs.ucla.edu/~ahmedk/" onclick="$('#pr-mpnns-abstract').toggle();return false;">abstract</a>]
+          [<a href="kareemahmed.com/" onclick="$('#pr-mpnns-abstract').toggle();return false;">abstract</a>]
           <div id="pr-mpnns-abstract" class="abstract" style="display:none;">
               <p>
                 Message-passing graph neural networks (MPNNs) emerged as powerful tools for
@@ -162,7 +147,7 @@
           <!-- <br> -->
             <em>NeurIPS 2023</em>.
           <br>
-          [<a href="http://web.cs.ucla.edu/~ahmedk/" onclick="$('#pseudo-sl-abstract').toggle();return false;">abstract</a>]
+          [<a href="kareemahmed.com/" onclick="$('#pseudo-sl-abstract').toggle();return false;">abstract</a>]
           <div id="pseudo-sl-abstract" class="abstract" style="display:none;">
               <p>
                 Neuro-symbolic approaches bridge the gap between purely symbolic and neural approaches to learning.
@@ -191,7 +176,7 @@
             <!-- <br> -->
             <em>NeurIPS 2023</em>.
           <br>
-          [<a href="http://web.cs.ucla.edu/~ahmedk/" onclick="$('#count-based_abstract').toggle();return false;">abstract</a>]
+          [<a href="kareemahmed.com/" onclick="$('#count-based_abstract').toggle();return false;">abstract</a>]
           <div id="count-based_abstract" class="abstract" style="display:none;">
               <p>
                 We observe that in weakly supervised learning for binary classification, the weak supervision can be seen as a constraint on label counts.
@@ -216,7 +201,7 @@
               Oral Presentation.
             </span></strong> -->
             <br>
-            [<a href="http://web.cs.ucla.edu/~ahmedk/" onclick="$('#SIMPLE_abstract').toggle();return false;">abstract</a>]
+            [<a href="kareemahmed.com/" onclick="$('#SIMPLE_abstract').toggle();return false;">abstract</a>]
             <div id="SIMPLE_abstract" class="abstract" style="display:none;">
                 <p>
                   k-subset sampling is ubiquitous in machine learning, enabling regularization and interpretability through sparsity. The challenge lies
@@ -238,7 +223,7 @@
               Oral Presentation.
             </span></strong> -->
             <br>
-            [<a href="http://web.cs.ucla.edu/~ahmedk/" onclick="$('#Semantic-Strengthening_abstract').toggle();return false;">abstract</a>]
+            [<a href="kareemahmed.com/" onclick="$('#Semantic-Strengthening_abstract').toggle();return false;">abstract</a>]
             <div id="Semantic-Strengthening_abstract" class="abstract" style="display:none;">
                 <p>
                   Numerous neuro-symbolic approaches have recently been proposed typically with the goal of adding symbolic knowledge to the output layer
@@ -263,7 +248,7 @@
               Oral Presentation.
             </span></strong> -->
             <br>
-            [<a href="http://web.cs.ucla.edu/~ahmedk/" onclick="$('#SPL_abstract').toggle();return false;">abstract</a>]
+            [<a href="kareemahmed.com/" onclick="$('#SPL_abstract').toggle();return false;">abstract</a>]
             <div id="SPL_abstract" class="abstract" style="display:none;">
                 <p>
                   We design a predictive layer for structured-output prediction (SOP) that can be plugged into any neural network guaranteeing
@@ -286,7 +271,7 @@
               Oral Presentation.
             </span></strong>
             <br>
-            [<a href="http://web.cs.ucla.edu/~ahmedk/" onclick="$('#NeSy-Entropy_abstract').toggle();return false;">abstract</a>]
+            [<a href="kareemahmed.com/" onclick="$('#NeSy-Entropy_abstract').toggle();return false;">abstract</a>]
             <div id="NeSy-Entropy_abstract" class="abstract" style="display:none;">
                 <p>
                   In structured prediction, the goal is to jointly predict many output variables that together encode a structured object&#8212;
@@ -311,7 +296,7 @@
             <br>
             <em><a href="http://starai.cs.ucla.edu/papers/AhmedAAAI22.pdf">AAAI 2021</a>, <a href="https://proceedings.mlr.press/v176/ahmed22a/ahmed22a.pdf">NeurIPS 2021</a></em>
           <br>
-            [<a href="http://web.cs.ucla.edu/~ahmedk/" onclick="$('#Pylon_abstract').toggle();return false;">abstract</a>]
+            [<a href="kareemahmed.com/" onclick="$('#Pylon_abstract').toggle();return false;">abstract</a>]
             </p><div id="Pylon_abstract" class="abstract" style="display:none;">
                 <p>
                   Deep learning excels at learning low-level task information from large amounts of data, but struggles with learning high-level domain knowledge, 
@@ -335,7 +320,7 @@
               Oral Presentation.
             </span></strong> -->
             <br>
-            [<a href="http://web.cs.ucla.edu/~ahmedk/" onclick="$('#NeSy-Entropy_abstract').toggle();return false;">abstract</a>]
+            [<a href="kareemahmed.com/" onclick="$('#NeSy-Entropy_abstract').toggle();return false;">abstract</a>]
             <div id="NeSy-Entropy_abstract" class="abstract" style="display:none;">
                 <p>
                   We study the problem of entity-relation extraction in the presence of symbolic domain knowledge. Such knowledge takes the 
@@ -454,24 +439,3 @@
 
 
 </body></html>
-<!--
-     FILE ARCHIVED ON 00:10:39 Apr 30, 2024 AND RETRIEVED FROM THE
-     INTERNET ARCHIVE ON 01:23:26 Sep 23, 2024.
-     JAVASCRIPT APPENDED BY WAYBACK MACHINE, COPYRIGHT INTERNET ARCHIVE.
-
-     ALL OTHER CONTENT MAY ALSO BE PROTECTED BY COPYRIGHT (17 U.S.C.
-     SECTION 108(a)(3)).
--->
-<!--
-playback timings (ms):
-  captures_list: 1.175
-  exclusion.robots: 0.267
-  exclusion.robots.policy: 0.253
-  esindex: 0.023
-  cdx.remote: 8.493
-  LoadShardBlock: 171.717 (3)
-  PetaboxLoader3.datanode: 125.472 (5)
-  PetaboxLoader3.resolve: 214.513 (3)
-  load_resource: 202.373
-  loaddict: 67.433
--->
