Add GenC and Scone

--- a/index.html
+++ b/index.html
@@ -75,10 +75,62 @@
     <div class="my-4 text-left">
       <h2>Publications</h2>
       <ul>
+        <li><b><a href="https://arxiv.org/abs/2505.01954">Semantic Probabilistic Control of Language Models</a></b>
+          <p class="content"><strong>Kareem Ahmed*</strong>, Catarina G Belem*, Padhraic Smyth, Sameer Singh</p>
+          <!-- <br> -->
+            <em>In Submission.</em>
+          <br>
+          [<a href="kareemahmed.com/" onclick="$('#Scone-abstract').toggle();return false;">abstract</a>]
+          <div id="Scone-abstract" class="abstract" style="display:none;">
+              <p>
+                Semantic control entails steering LM generations towards satisfying subtle non-lexical constraints,
+                e.g., toxicity, sentiment, or politeness, attributes that can be captured by a sequence-level verifier.
+                It can thus be viewed as sampling from the LM distribution conditioned on the target attribute, a
+                computationally intractable problem due to the non-decomposable nature of the verifier. Existing approaches
+                to LM control either only deal with syntactic constraints which cannot capture the aforementioned attributes,
+                or rely on sampling to explore the conditional LM distribution, an ineffective estimator for low-probability
+                events. In this work, we leverage a verifier's gradient information to efficiently reason over all generations
+                that satisfy the target attribute, enabling precise steering of LM generations by reweighing the next-token
+                distribution. Starting from an initial sample, we create a local LM distribution favoring semantically similar
+                sentences. This approximation enables the tractable computation of an expected sentence embedding. We use this
+                expected embedding, informed by the verifier's evaluation at the initial sample, to estimate the probability of
+                satisfying the constraint, which directly informs the update to the next-token distribution. We evaluated the
+                effectiveness of our approach in controlling the toxicity, sentiment, and topic-adherence of LMs yielding
+                generations satisfying the constraint with high probability (>95%) without degrading their quality.
+              </p>
+          </div>
+          <p></p>
+        </li>
+        <li><b><a href="https://arxiv.org/abs/2410.13111">Controllable Generation via Locally Constrained Resampling</a></b>
+          <p class="content"><strong>Kareem Ahmed</strong>, Kai-Wei Chang, Guy Van den Broeck</p>
+          <!-- <br> -->
+            <em>ICLR 2025; Safe Generative AI Workshop @ NeurIPS 2024.</em> <strong><span style="color:red">Oral Presentation.</span></strong>
+          <br>
+          [<a href="kareemahmed.com/" onclick="$('#GenC-abstract').toggle();return false;">abstract</a>]
+          <div id="GenC-abstract" class="abstract" style="display:none;">
+              <p>
+                Autoregressive models have demonstrated an unprecedented ability at modeling the intricacies of natural language.
+                However, they continue to struggle with generating complex outputs that adhere to logical constraints.
+                Sampling from a fully-independent distribution subject to a constraint is hard. Sampling from an autoregressive
+                distribution subject to a constraint is doubly hard: We have to contend not only with the hardness of the constraint
+                but also the distribution's lack of structure. We propose a tractable probabilistic approach that performs Bayesian
+                conditioning to draw samples subject to a constraint. Our approach considers the entire sequence, leading to a more
+                globally optimal constrained generation than current greedy methods. Starting from a model sample, we induce a local,
+                factorized distribution which we can tractably condition on the constraint. To generate samples that satisfy the
+                constraint, we sample from the conditional distribution, correct for biases in the samples and resample. The resulting
+                samples closely approximate the target distribution and are guaranteed to satisfy the constraints. We evaluate our
+                approach on several tasks, including LLM detoxification and solving Sudoku puzzles. We show that by disallowing a list
+                of toxic expressions our approach is able to steer the model's outputs away from toxic generations, outperforming similar
+                approaches to detoxification. We conclude by showing that our approach achieves a perfect accuracy on Sudoku compared to
+                &lt;50% for GPT4-o and Gemini 1.5.
+              </p>
+          </div>
+          <p></p>
+        </li>
           <li><b><a href="https://arxiv.org/abs/2408.08541">Where is the signal in tokenization space?</a></b>
           <p class="content"> Renato Lui Geh, Honghua Zhang, <strong>Kareem Ahmed</strong>, Benjie Wang, Guy Van den Broeck</p>
           <!-- <br> -->
-            <em>EMNLP 2024</em>.
+            <em>EMNLP 2024</em>. <strong><span style="color:red">Oral Presentation.</span></strong>
           <br>
           [<a href="kareemahmed.com/" onclick="$('#tokenization-abstract').toggle();return false;">abstract</a>]
           <div id="tokenization-abstract" class="abstract" style="display:none;">
